--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://paramseh.github.io/portfolio",
+  "homepage": "http://sehraw.at/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
