--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sehraw.at/",
+  "homepage": "http://www.sehraw.at/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
